Added search functionality

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -35,3 +35,6 @@ ORGANISATION GROUPS: 'ORGANISATION GROUPS'
 You are a member of these groups: 'You are a member of these groups'
 ALL GROUPS: 'ALL GROUPS'
 There is a total of %count% groups: 'There is a total of %count% groups'
+
+SEARCH: 'SEARCH'
+Results for data: 'Results for data'
