--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -35,3 +35,6 @@ ORGANISATION GROUPS: 'ORGANISATIE GROEPEN'
 You are a member of these groups: 'Je bent lid van deze groepen'
 ALL GROUPS: 'ALLE GROEPEN'
 There is a total of %count% groups: 'Er zijn in taal %count% groepen'
+
+SEARCH: 'ZOEKEN'
+Results for data: 'Resultaten voor data'
