WIP on view/edit popup

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -48,3 +48,8 @@ Type: 'Type'
 Select a type...: 'Select a type...'
 Submit: 'Submit'
 Cancel: 'Cancel'
+
+Group members: 'Group members'
+Add members: 'Add members'
+
+Admin: 'Administrator'
