--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -48,3 +48,8 @@ Type: 'Type'
 Select a type...: 'Selecteer een type...'
 Submit: 'Opslaan'
 Cancel: 'Annuleren'
+
+Group members: 'Groep leden'
+Add members: 'Lid toevoegen'
+
+Admin: 'Beheerder'
