Added basic leave group functionality

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -58,3 +58,5 @@ Admin: 'Administrator'
 Deze groep verwijderen?: 'Delete this group?'
 Ja: 'Yes'
 Nee: 'No'
+
+Deze groep verlaten?: 'Leave this group?'
