--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -58,3 +58,5 @@ Admin: 'Beheerder'
 Deze groep verwijderen?: 'Deze groep verwijderen?'
 Ja: 'Ja'
 Nee: 'Nee'
+
+Deze groep verlaten?: 'Deze groep verlaten?'
