--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -22,6 +22,7 @@ Jan - Dec: 'Jan - Dec'
 Dec - Jan: 'Dec - Jan'
 
 MEMBER: 'MEMBER'
+PROSPECT: 'PROSPECT'
 LEAVE: 'LEAVE'
 JOIN: 'JOIN'
 EDIT: 'EDIT'
@@ -60,3 +61,9 @@ Ja: 'Yes'
 Nee: 'No'
 
 Deze groep verlaten?: 'Leave this group?'
+
+Lidmaatschap aanvragen: 'Join group'
+Naam group: 'Name group:'
+Persoonlijk bericht: 'Personal message:'
+Aanvragen: 'Join'
+Annuleren: 'Cancel'
