Updated leave group styling

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -60,6 +60,7 @@ Deze groep verwijderen?: 'Delete this group?'
 Ja: 'Yes'
 Nee: 'No'
 
+Leave group: 'Leave group'
 Deze groep verlaten?: 'Leave this group?'
 
 Lidmaatschap aanvragen: 'Join group'
