--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -60,6 +60,7 @@ Deze groep verwijderen?: 'Deze groep verwijderen?'
 Ja: 'Ja'
 Nee: 'Nee'
 
+Leave group: 'Groep verlaten'
 Deze groep verlaten?: 'Deze groep verlaten?'
 
 Lidmaatschap aanvragen: 'Lidmaatschap aanvragen'
