Added support for rendering and processing notifications

--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -68,3 +68,11 @@ Naam group: 'Naam group:'
 Persoonlijk bericht: 'Persoonlijk bericht:'
 Aanvragen: 'Aanvragen'
 Annuleren: 'Annuleren'
+
+NOTIFICATIONS: 'KENNISGEVINGEN'
+Datum: 'Datum'
+Groep: 'Groep'
+Gebruiker: 'Gebruiker'
+Bericht: 'Bericht'
+Accepteer: 'Accepteer'
+Annuleer: 'Annuleer'
