--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -68,3 +68,11 @@ Naam group: 'Name group:'
 Persoonlijk bericht: 'Personal message:'
 Aanvragen: 'Join'
 Annuleren: 'Cancel'
+
+NOTIFICATIONS: 'NOTIFICATIONS'
+Datum: 'Date'
+Groep: 'Group'
+Gebruiker: 'User'
+Bericht: 'Message'
+Accepteer: 'Accept'
+Annuleer: 'Cancel'
