Removed duplicated prospect content

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -29,6 +29,7 @@ EDIT: 'EDIT'
 Member: 'Member'
 Administrator: 'Administrator'
 Owner: 'Owner'
+Prospect: 'Prospect'
 
 MY GROUPS: 'MY GROUPS'
 You own or are a member of the group: 'You own or are a member of the group'
