--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -29,6 +29,7 @@ EDIT: 'BEWERKEN'
 Member: 'Lid'
 Administrator: 'Beheerder'
 Owner: 'Eigenaar'
+Prospect: 'Aspirant'
 
 MY GROUPS: 'MIJN GROEPEN'
 You own or are a member of the group: 'Je bezit of bent lid van deze groepen'
