--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -67,3 +67,5 @@ Accepteer: 'Accepteer'
 Afwijzen: 'Afwijzen'
 
 logout_info: 'Om uit te loggen, is het sluiten van de browser voldoende'
+
+more: 'meer...'
