--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -67,6 +67,9 @@ Accepteer: 'Accepteer'
 Afwijzen: 'Afwijzen'
 OK: 'OK'
 
+notification_confirmed: 'Je bent toegevoegd'
+notification_denied: 'Je bent geweigerd'
+
 logout_info: 'Om uit te loggen, is het sluiten van de browser voldoende'
 
 more: 'meer...'
